--- a/webpage/html/index.html
+++ b/webpage/html/index.html
@@ -19,6 +19,19 @@
                 <a href="createYourOwnArt.html"> Create your own art </a>
             </div>
         </div>
+        <div> 
+            <p> 
+            Welcome to this website on <em> art through continued functions. </em> <br> 
+            By applying functions over and over again to a subset of the complex plane one can generate images by displaying the angle or radius of the limiting value (given that this exists). The resulting images can exhibit everything from rather simple, two color shapes to highly complex, fractal-like structures. Since the base function that generates the images is highly customizable, there is a nearly endless room of possibilities. It feels almost like exploring unknown continents, never previously seen by man! <br>
+            This website provides
+                <ul>
+                    <li> A sample gallery of pictures and gifs </li>
+                    <li> A section on the theory and numerics behind the calculations </li>
+                    <li> All the tools you need to start playing around and creating your own art </li>
+                </ul>
+                Have fun with CFA!
+            </p>
+        </div>
     </body>
 
 </html>
