--- a/webpage/html/gallery.html
+++ b/webpage/html/gallery.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
         <title> Continued Functional Art: Gallery </title>
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="stylesheet" href="../css/header-styles.css">
+        <link rel="icon" type="image/x-icon" href="../../images/favicons/sample_23.png">
     </head>
 
     <body>
@@ -19,6 +20,21 @@
                 <a href="createYourOwnArt.html"> Create your own art </a>
             </div>
         </div>
+        <h1> Sample images </h1>
+        <h2> Log of Lin <h2>
+        <h2> Log of Quad <h2>
+        <h2> Log of Cube <h2>
+        <h2> Log of Sin <h2>
+        <h1> Walks </h1>
+        <h2> Log of Lin <h2>
+        <h2> Log of Quad <h2>
+        <h2> Log of Cube <h2>
+        <h2> Log of Sin <h2>
+        <h1> Zooms </h1>
+        <h2> Log of Lin <h2>
+        <h2> Log of Quad <h2>
+        <h2> Log of Cube <h2>
+        <h2> Log of Sin <h2>
     </body>
 
 </html>
