--- a/webpage/html/createYourOwnArt.html
+++ b/webpage/html/createYourOwnArt.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
         <title> Continued Functional Art: Create your own </title>
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="stylesheet" href="../css/header-styles.css">
+        <link rel="icon" type="image/x-icon" href="../../images/favicons/sample_30.png">
     </head>
 
     <body>
