--- a/webpage/html/theory.html
+++ b/webpage/html/theory.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
         <title> Continued Functional Art: Theory </title>
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="stylesheet" href="../css/header-styles.css">
+        <link rel="icon" type="image/x-icon" href="../../images/favicons/sample_25.png">
     </head>
 
     <body>
