- Merged CSSs into one, introduced more semantic-lvl sytlings - Cleaned up HTML structure so far and added some content - Introduced figure around img - Prepared footer and nav for gallery - Added meta info into the htmls - Fixed the shanks logic to be numerically more stable and cleaner - Built a test function for the shanks logic - Created a README, defining some long term goals of this project

--- a/webpage/html/gallery.html
+++ b/webpage/html/gallery.html
@@ -4,22 +4,28 @@
     <head>
         <title> Continued Functional Art: Gallery </title>
         <link rel="stylesheet" href="../css/styles.css">
-        <link rel="stylesheet" href="../css/header-styles.css">
         <link rel="icon" type="image/x-icon" href="../../images/favicons/sample_23.png">
+        <script src="../js/jsCode.js"></script>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
-        <div class="header">
-            <div class="upper-header">
-                <h1> Continued Functional Art </h1>
-            </div>
-            <div class="lower-header">
-                <a href="index.html"> Home </a>
-                <a href="gallery.html"> Gallery </a>
-                <a href="theory.html"> Theory </a>
-                <a href="createYourOwnArt.html"> Create your own art </a>
-            </div>
+
+        <header>
+        <div> <h1> Continued Functional Art </h1> </div>
+        <div>
+            <a href="index.html"> Home </a>
+            <a href="gallery.html"> Gallery </a>
+            <a href="theory.html"> Theory </a>
+            <a href="createYourOwnArt.html"> Create your own art </a>
         </div>
+        </header>
+
+        <nav> This will become a navigational panel. </nav>
+
+        <section>
+
         <h1> Sample images </h1>
         <h2> Log of Lin <h2>
         <h2> Log of Quad <h2>
@@ -35,6 +41,9 @@
         <h2> Log of Quad <h2>
         <h2> Log of Cube <h2>
         <h2> Log of Sin <h2>
+
+        </section>
+
     </body>
 
 </html>
