--- a/webpage/html/createYourOwnArt.html
+++ b/webpage/html/createYourOwnArt.html
@@ -4,22 +4,28 @@
     <head>
         <title> Continued Functional Art: Create your own </title>
         <link rel="stylesheet" href="../css/styles.css">
-        <link rel="stylesheet" href="../css/header-styles.css">
         <link rel="icon" type="image/x-icon" href="../../images/favicons/sample_30.png">
+        <script src="../js/jsCode.js"></script>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
-        <div class="header">
-            <div class="upper-header">
-                <h1> Continued Functional Art </h1>
-            </div>
-            <div class="lower-header">
+
+        <header>
+            <div> <h1> Continued Functional Art </h1> </div>
+            <div>
                 <a href="index.html"> Home </a>
                 <a href="gallery.html"> Gallery </a>
                 <a href="theory.html"> Theory </a>
                 <a href="createYourOwnArt.html"> Create your own art </a>
             </div>
-        </div>
+        </header>
+
+        <section>
+            This page will eventually contain an interface with which one can create Functional Art. Also user interface to upload pics etc...
+        </section>
+
     </body>
 
 </html>
