Created tooltip for function type selector on image preview and moved refresh button into the image. Changed default preview image to something more beautiful. Constructed function generator class and test file - not done yet, fix it! Created new index file in root that automatically reroutes to main (which is the renamed old index)

--- a/webpage/html/gallery.html
+++ b/webpage/html/gallery.html
@@ -15,7 +15,7 @@
         <header>
         <div> <h1> Continued Functional Art </h1> </div>
         <div>
-            <a href="index.html"> Home </a>
+            <a href="main.html"> Home </a>
             <a href="gallery.html"> Gallery </a>
             <a href="theory.html"> Theory </a>
             <a href="createYourOwnArt.html"> Create your own art </a>
