- Created js code to write the header into the beginning of every htmls body - Adapted the header style for responsive design - Cleaned up the main page - Introduced max width div for full body with dynamic margin left&right - Defined footer in js code, still needs to be filled correctly - improved grid creation by using meshgrid - created shanks profiling file - slightly improved shanks logic by wrapping assessConvergence into try   block to prevent unnecessary len checks

--- a/webpage/html/gallery.html
+++ b/webpage/html/gallery.html
@@ -5,22 +5,12 @@
         <title> Continued Functional Art: Gallery </title>
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="icon" type="image/x-icon" href="../../images/favicons/sample_23.png">
-        <script src="../js/jsCode.js"></script>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
-
-        <header>
-        <div> <h1> Continued Functional Art </h1> </div>
-        <div>
-            <a href="main.html"> Home </a>
-            <a href="gallery.html"> Gallery </a>
-            <a href="theory.html"> Theory </a>
-            <a href="createYourOwnArt.html"> Create your own art </a>
-        </div>
-        </header>
+        <div id="globContainer">
 
         <nav> This will become a navigational panel. </nav>
 
@@ -43,7 +33,9 @@
         <h2> Log of Sin <h2>
 
         </section>
+        </div>
 
+        <script src="../js/jsCode.js"></script>
     </body>
 
 </html>
