--- a/webpage/html/theory.html
+++ b/webpage/html/theory.html
@@ -5,28 +5,22 @@
         <title> Continued Functional Art: Theory </title>
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="icon" type="image/x-icon" href="../../images/favicons/sample_25.png">
-        <script src="../js/jsCode.js"></script>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
-        <header>
-            <div> <h1> Continued Functional Art </h1> </div>
-            <div>
-                <a href="main.html"> Home </a>
-                <a href="gallery.html"> Gallery </a>
-                <a href="theory.html"> Theory </a>
-                <a href="createYourOwnArt.html"> Create your own art </a>
-            </div>
-        </header>
 
+        <div id="globContainer">
         <article>
             <p> On this page I will explain how the pictures are created, both from a mathematical and numerical standpoint. I will do this purely with HTML, without using any Latex. </p>
             <h2> Continued functions </h2>
             <h2> Converging sequences and the Shanks transformation </h2>
         </article>
 
+        </div>
+
+        <script src="../js/jsCode.js"></script>
     </body>
 
 </html>
