Introduced tailwind and changed the whole layout based on it. Reorganized the file structure, cleaned up the html files. Possibly introduced responsive design structures.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head> <script> window.location.href = "webpage/html/main.html" </script> </head>
+    <head> <script> window.location.href = "src/main.html" </script> </head>
     <body> </body>
 </html>
