--- a/src/gallery.html
+++ b/src/gallery.html
@@ -7,23 +7,23 @@
     </head>
 
     <body>
-        <nav class="flex inline-block fixed top-0 bg-indigo-500 text-white"> 
-            <p> Navigator </p>
-            <ul>
-                <li><a class="navBtn" href="#sampleImgs"> Best Ofs </a> </li>
-                <li><a class="navBtn" href="#walks"> Walks </a> </li>
-                <li><a class="navBtn" href="#zooms"> Zooms </a> </li>
+        <div onmouseover="document.getElementById('navList').style.display='block';" onmouseout="document.getElementById('navList').style.display='none';" class="flex inline-block fixed rounded-r-md p-1 left-0 bottom-1/2 bg-indigo-400 text-white"> 
+            <p class="text-center text-lg"> <i class="bi bi-signpost-2-fill"></i> </p>
+            <ul id="navList" class="hidden list-disc list-inside">
+                <li><a class="cursor-pointer hover:font-bold transition duration-600" href="#sampleImgs"> Best Ofs </a> </li>
+                <li><a class="cursor-pointer hover:font-bold transition duration-600" href="#walks"> Walks </a> </li>
+                <li><a class="cursor-pointer hover:font-bold transition duration-600" href="#zooms"> Zooms </a> </li>
             </ul>
-        </nav> 
+        </div> 
 
-        <h1 class="text-center text-2xl font-bold mb-2"> Best Ofs </h1>
-        <div class="columns-1 gap-1 sm:columns-2 sm:gap-2 md:columns-3 md:gap-3 lg:columns-4 lg:gap-4 xl:columns-5 xl:gap-5 content-between" id='sampleImgs'>
+        <h1 class="bg-zinc-600 text-white text-center text-2xl font-bold mb-2"> Best Ofs </h1>
+        <div class="grid ml-10 grid-cols-1 gap-3 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id='sampleImgs'>
         </div>
-        <h1 class="text-center text-2xl font-bold mb-2"> Walks </h1>
-        <div class="columns-1 gap-1 sm:columns-2 sm:gap-2 md:columns-3 md:gap-3 lg:columns-4 lg:gap-4 xl:columns-5 xl:gap-5 content-between" id='walks'>
+        <h1 class="bg-zinc-600 text-white text-center text-2xl font-bold mb-2"> Walks </h1>
+        <div class="grid ml-10 grid-cols-1 gap-3 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id='walks'>
         </div>
-        <h1 class="text-center text-2xl font-bold mb-2"> Zooms </h1>
-        <div class="columns-1 gap-1 sm:columns-2 sm:gap-2 md:columns-3 md:gap-3 lg:columns-4 lg:gap-4 xl:columns-5 xl:gap-5 content-between" id='zooms'>
+        <h1 class="bg-zinc-600 text-white text-center text-2xl font-bold mb-2"> Zooms </h1>
+        <div class="grid ml-10 grid-cols-1 gap-3 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id='zooms'>
         </div>
 
         </div>
