Activated purge for tw, (hopefully) fixed display of pics and animation

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -17,13 +17,13 @@
         </div> 
 
         <h1 class="bg-zinc-600 text-white text-center text-2xl font-bold mb-2"> Best Ofs </h1>
-        <div class="grid ml-10 grid-cols-1 gap-3 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id='sampleImgs'>
+        <div class="grid mx-2 grid-cols-1 gap-3 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id='sampleImgs'>
         </div>
         <h1 class="bg-zinc-600 text-white text-center text-2xl font-bold mb-2"> Walks </h1>
-        <div class="grid ml-10 grid-cols-1 gap-3 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id='walks'>
+        <div class="grid m-2 grid-cols-1 gap-3 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id='walks'>
         </div>
         <h1 class="bg-zinc-600 text-white text-center text-2xl font-bold mb-2"> Zooms </h1>
-        <div class="grid ml-10 grid-cols-1 gap-3 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id='zooms'>
+        <div class="grid mx-2 grid-cols-1 gap-3 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id='zooms'>
         </div>
 
         </div>
